<resources>
    <string name="app_name">JMailLibrary</string>
    <string name="send">send</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="server">Server</string>
    <string name="port">Port</string>
    <string name="user">user</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
</resources>
